# golf-cart-infotainment

./: .gitmodules  99-android-auto.rules  AASDK_INTEGRATION.md  ANDROID_SETUP.md  README.md  package.json  pnpm-lock.yaml  run-dev.sh
public/: TinyH264Decoder.js  h264-decoder-worker.js  h264-module-worker.js  h264-worker.js
src/: AndroidAutoDisplay.tsx  Dashboard.css  Dashboard.tsx  tinyh264.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/aasdk-wrapper/: README.md  aasdk_c.cpp  aasdk_c.h  build_aasdk.sh  fix_rpath.sh
src-tauri/src/: aasdk_bindings.rs  audio.rs  hardware.rs  lib.rs  main.rs  openauto.rs  video_decoder.rs
